inou/prp/tests/errors/bundle_named_positional.prp
/*
:name: bundle_named_positional
:type: error
:error: name-access only
*/

// Positional access is only valid for UNNAMED entries. A named tuple is
// name-access only — `a[0]` is an error; use `a.b`.

const a = (b = 1, c = 2)
const y = a[0]
